--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "html5-boilerplate": "^5.3.0",
     "angular-ui-router": "^0.3.1",
     "bootstrap": "^3.3.7",
-    "angular-bootstrap": "^2.2.0"
+    "angular-bootstrap": "^2.2.0",
+    "angular-resource": "^1.5.8"
   }
 }
