--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-ui-router": "^0.3.1",
     "bootstrap": "^3.3.7",
     "angular-bootstrap": "^2.2.0",
-    "angular-resource": "^1.5.8"
+    "angular-resource": "^1.5.8",
+    "angular-ui-notification": "^0.2.0"
   }
 }
